[package]
name = "cairn"
version = "0.2.0"
edition = "2021"
description = "A session-based idea organizer and AI coworker for people with no free time"
license = "MIT"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "=4.4.18", features = ["derive"] }
directories = "5"
owo-colors = "4"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
inquire = "0.7"

[profile.release]
strip = true
lto = true
